--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev-server": "webpack serve"
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -19,15 +19,26 @@
   },
   "homepage": "https://github.com/manylovv/frontend-project-11#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.11",
+    "css-loader": "^6.7.1",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.1"
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
+    "i18next": "^21.9.2",
+    "lodash": "^4.17.21",
+    "on-change": "^4.0.1",
+    "yup": "^0.32.11"
   }
 }
