refactor: small changes in few files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/manylovv/frontend-project-11.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "manylovv",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/manylovv/frontend-project-11/issues"
