--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "browser": true,
     "es2021": true
   },
-  "extends": "eslint:recommended",
+  "extends": "airbnb-base",
+  "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
