--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "no-console": "off",
+    "no-param-reassign": "off"
   }
 }
